@@ -36,9 +36,20 @@ void mapper_init(const char *_music_dir, const char *_playlist_dir);
 
 void mapper_finish(void);
 
+/**
+ * Return the absolute path of the music directory encoded in UTF-8.
+ */
 G_GNUC_CONST
 const char *
-mapper_get_music_directory(void);
+mapper_get_music_directory_utf8(void);
+
+/**
+ * Return the absolute path of the music directory encoded in the
+ * filesystem character set.
+ */
+G_GNUC_CONST
+const char *
+mapper_get_music_directory_fs(void);
 
 /**
  * Returns true if a music directory was configured.
@@ -47,7 +58,7 @@ G_GNUC_CONST
 static inline bool
 mapper_has_music_directory(void)
 {
-	return mapper_get_music_directory() != NULL;
+	return mapper_get_music_directory_utf8() != NULL;
 }
 
 /**
